# ego-mss

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ego_mss/: __init__.py  factory.py  windows.py
