[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "ego-mss"
version = "0.0.1"
description = "An module for taking screenshots of applications searched by their names, based on tried-and-true Python MSS."
authors = ["Gavrilovici Eduard <eddiegavrilovici@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mss = "^7.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
